--- a/DB_hospital.ipynb
+++ b/DB_hospital.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "[4912 rows x 5 columns]"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -304,7 +304,7 @@
        "[4912 rows x 3 columns]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "[1658 rows x 1 columns]"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,31 +460,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        문경시\n",
-       "1         북구\n",
-       "2         북구\n",
-       "3         북구\n",
-       "4         북구\n",
-       "        ... \n",
-       "4907    남양주시\n",
-       "4908      동구\n",
-       "4909     사하구\n",
-       "4910      서구\n",
-       "4911     송파구\n",
-       "Name: 도로명전체주소, Length: 4912, dtype: object"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#DB, 사용자 선택목록 보여줄때 사용할 자료(?)\n",
     "Location = hospital['도로명전체주소'].str.split(\" \")\n",
@@ -497,7 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hospital['도로명전체주소'].str.extract('( \\w*시 )|( \\w*군 )|( \\w*구 )')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -521,41 +508,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
+       "      <th>소재지전화</th>\n",
+       "      <th>도로명전체주소</th>\n",
+       "      <th>사업장명</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>문경시</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>경상북도 문경시 문경읍 청운로 70</td>\n",
+       "      <td>문경가축병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>북구</td>\n",
+       "      <td>571-9114</td>\n",
+       "      <td>광주광역시 북구 양일로305번길 8 (일곡동)</td>\n",
+       "      <td>일곡동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>북구</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>광주광역시 북구 태봉로 37-6 (임동)</td>\n",
+       "      <td>우리동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>북구</td>\n",
+       "      <td>062-574-7975</td>\n",
+       "      <td>광주광역시 북구 하서로 371, 1층 (양산동)</td>\n",
+       "      <td>참좋은 동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>북구</td>\n",
+       "      <td>224-7582</td>\n",
+       "      <td>광주광역시 북구 서하로 319-1 (오치동)</td>\n",
+       "      <td>김앤강 동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -565,33 +552,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4907</th>\n",
-       "      <td>남양주시</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>경기도 남양주시 오남읍 진건오남로 778, 선일프라자 205호</td>\n",
+       "      <td>하이 동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4908</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>동구</td>\n",
+       "      <td>없음</td>\n",
+       "      <td>대전광역시 동구 계족로 510, 3층 (용전동)</td>\n",
+       "      <td>케어동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4909</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>사하구</td>\n",
+       "      <td>051-265-0114</td>\n",
+       "      <td>부산광역시 사하구 장림번영로 41, 1층 (장림동)</td>\n",
+       "      <td>모아동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4910</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>서구</td>\n",
+       "      <td>032-569-6677</td>\n",
+       "      <td>인천광역시 서구 발산로 41, 4층 (원당동)</td>\n",
+       "      <td>24시 더원 동물병원</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4911</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>송파구</td>\n",
+       "      <td>02-420-9993</td>\n",
+       "      <td>서울특별시 송파구 가락로 162, 1층 (송파동)</td>\n",
+       "      <td>한양동물병원</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -599,29 +586,30 @@
        "</div>"
       ],
       "text/plain": [
-       "           0    1      2\n",
-       "0       문경시   NaN    NaN\n",
-       "1        NaN  NaN    북구 \n",
-       "2        NaN  NaN    북구 \n",
-       "3        NaN  NaN    북구 \n",
-       "4        NaN  NaN    북구 \n",
-       "...      ...  ...    ...\n",
-       "4907   남양주시   NaN    NaN\n",
-       "4908     NaN  NaN    동구 \n",
-       "4909     NaN  NaN   사하구 \n",
-       "4910     NaN  NaN    서구 \n",
-       "4911     NaN  NaN   송파구 \n",
+       "             소재지전화                             도로명전체주소         사업장명\n",
+       "0               없음                 경상북도 문경시 문경읍 청운로 70       문경가축병원\n",
+       "1         571-9114           광주광역시 북구 양일로305번길 8 (일곡동)       일곡동물병원\n",
+       "2               없음              광주광역시 북구 태봉로 37-6 (임동)       우리동물병원\n",
+       "3     062-574-7975          광주광역시 북구 하서로 371, 1층 (양산동)     참좋은 동물병원\n",
+       "4         224-7582            광주광역시 북구 서하로 319-1 (오치동)     김앤강 동물병원\n",
+       "...            ...                                 ...          ...\n",
+       "4907            없음  경기도 남양주시 오남읍 진건오남로 778, 선일프라자 205호      하이 동물병원\n",
+       "4908            없음          대전광역시 동구 계족로 510, 3층 (용전동)       케어동물병원\n",
+       "4909  051-265-0114        부산광역시 사하구 장림번영로 41, 1층 (장림동)       모아동물병원\n",
+       "4910  032-569-6677           인천광역시 서구 발산로 41, 4층 (원당동)  24시 더원 동물병원\n",
+       "4911   02-420-9993         서울특별시 송파구 가락로 162, 1층 (송파동)       한양동물병원\n",
        "\n",
        "[4912 rows x 3 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#hospital['도로명전체주소'].str.extract('( \\w*시 )|( \\w*군 )|( \\w*구 )')"
+    "hospital.to_csv(\"hospital.csv\")\n",
+    "hospital"
    ]
   },
   {
